--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
-version: "2"
+version: '3'
 services:
-  app:
-    container_name: app
-    restart: always
-    build: .
+  myservice:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    image: result/latest
     ports:
-      - "3000:3000"
-    links:
-      - mongo
+    - "8080:8080"
+    depends_on:
+    - mongo
   mongo:
-    container_name: mongo
     image: mongo
-    volumes:
-      - ./data:/data/db
     ports:
-      - "27017:27017"
+    - "27017:27017"
+
+
